feat(monitors): add website editing and deletion
